# mimxrt633s-pac

./: .gitignore  AGENTS.md  CODEOWNERS  Cargo.toml  README.md  deny.toml  device.x
.github/: copilot-instructions.md
.github/workflows/: check.yml
patch/: MIMXRT633S.yaml  crc.yaml  espi.yaml  toplevel.yaml
src/: clkctl0.rs  dma0.rs  dmic0.rs  espi.rs  gpio.rs  i2s0.rs  inputmux.rs  lib.rs  mrt0.rs  otfad.rs  sct0.rs
src/clkctl0/: espiclksel.rs
src/dma0/: channel.rs
src/dmic0/: channel.rs
src/espi/: dmactrl.rs  espicap.rs  espicfg.rs  espimisc.rs  intenclr.rs  intenset.rs  intstat.rs  irqpush.rs  mapbase.rs  mctrl.rs  mstat.rs  p0addr.rs  p0cfg.rs  p0data_in.rs  p0data_out.rs  p0irule_stat.rs  p0omflen.rs  p0ramuse.rs  p0stat.rs  p1addr.rs  p1cfg.rs  p1data_in.rs  p1data_out.rs  p1irule_stat.rs  p1omflen.rs  p1ramuse.rs  p1stat.rs  p2addr.rs  p2cfg.rs  p2data_in.rs  p2data_out.rs  p2irule_stat.rs  p2omflen.rs  p2ramuse.rs  p2stat.rs  p3addr.rs  p3cfg.rs  p3data_in.rs  p3data_out.rs  p3irule_stat.rs  (+22 more)
src/espi/port/: addr.rs  cfg.rs  datain.rs  irulestat.rs  omflen.rs  ramuse.rs  stat.rs
src/gpio/: b.rs  w.rs
src/i2s0/: secchannel.rs
src/inputmux/: ct32bit_cap_sel.rs  dmac0_req_ena0.rs  dmac0_req_ena0_clr.rs  dmac0_req_ena0_set.rs  dmac0_req_ena1.rs  dmac0_req_ena1_clr.rs  dmac0_req_ena1_set.rs  dmac1_req_ena0.rs  dmac1_req_ena0_clr.rs  dmac1_req_ena0_set.rs  dmac1_req_ena1.rs  dmac1_req_ena1_clr.rs  dmac1_req_ena1_set.rs
src/mrt0/: channel.rs
src/otfad/: ctx.rs
src/sct0/: ev.rs  out.rs
src/sysctl0/: hwwake.rs
supply-chain/: config.toml
(+6 files in other folders)
